--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,43 +1,13 @@
 <!DOCTYPE html>
 
-<html ng-app="geektic">
+<html >
 <head>
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 <title>Geektic</title>
 </head>
-<body ng-controller="HelloCtrl">
-	<h1>Geektic</h1>
-	<div>
-		<h4 class="text-center">Je recherche :</h4>
-		<input ng-model="sexe" type="radio" name="radioSex" value="M"
-			checked="checked">&nbsp;Un Geek <br> <input
-			ng-model="sexe" type="radio" name="radioSex" value="F">&nbsp;Une
-		Geeke <br>
-
-		<h4 class="text-center">qui apprécie...</h4>
-		<select style="margin-top: 10px;" ng-model="interet"
-			placeholder="selction"
-			ng-options="interet.unInteret for interet in interets">
-		</select>
-	</div>
-	<button class="btn btn-large btn-block btn-primary" style="width: 10%; margin:auto; margin-top:20px;" ng-click="trouverGeeks()">Trouver l'amour!!</button>
-	<div style="margin: 20px 50px; border: solid 1px black; float: left; background-color: #F2F2F2; border-radius: 10px;" >
-		     <div style="margin: auto; width: 400px;  border-radius: 10px; padding: 10px;" ng-repeat="geek in geeks">		     		     
-			     <div ng-click="details = !details">
-			     <p><img src="http://www.gravatar.com/avatar/{{geek.unTreeAvatar}}"></p>
-			     <p class="text-info">{{ geek.unPrenom }} {{ geek.unNom }}</p>	
-			     <div ng-show="details">
-			     <p> Age: {{geek.unAge}} ans. </p>
-			     <p> mail: {{geek.unMail}}</p>
-			     <p> Centres d'interêt: </p>	
-			     <ul>     		
-			     	<li ng-repeat="interet in geek.mesInterets">
-			     		{{ interet.unInteret }}
-			     	</li>	
-			     </ul>
-			     </div>
-			     </div>	   	   
-		     </div>
-		</div>
+<body ng-app="geektic">
+	<h1>Geektic</h1>	
+    <div ng-view></div>
 	<script src="/js/angular.js"></script>
 	<script src="/js/angular-route.js"></script>
 	<script src="/js/app.js"></script>
