Mise en place des pages webs ainsi que l'utilisation du framework bootstrap pour le style

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,7 +6,9 @@
 <title>Geektic</title>
 </head>
 <body ng-app="geektic">
-	<h1>Geektic</h1>	
+<div class="navbar-inner"><div class="container"><a class="brand" href="#"><h1>
+     Geektic
+    </h1></a></div></div>	
     <div ng-view></div>
 	<script src="/js/angular.js"></script>
 	<script src="/js/angular-route.js"></script>
